fix: modal centering and overflow-y on modal content scroll

--- a/client/components/css/Column.css
+++ b/client/components/css/Column.css
@@ -29,8 +29,8 @@
 }
 
 .columnBadge {
-  font-size: 18px;
-  padding: 0.3em;
+  font-size: 14px;
+  padding: 2px 4px;
   background-color: #fff;
   border-radius: 5px;
   margin-right: 0.5em;
