--- a/client/components/css/Comment.css
+++ b/client/components/css/Comment.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: min-content;
-  width: auto;
+  width: 100%;
   padding: 1em 0;
   border-bottom: 1px solid lightgrey;
 }
